--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "author": "Mustafa YILMAZ",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
