--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "author": "Mustafa YILMAZ",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.4.4"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.4.4",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
