--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.4",
+    "nodemailer": "^6.7.7",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
